--- a/최종 코드.md
+++ b/최종 코드.md
@@ -1,24 +1,25 @@
-#인터넷에 Stack을 검색할 시 같은 버전이 안나오길래 Stack을 미리 정의함
+인터넷에 Stack을 검색할 시 같은 버전이 안나오길래 Stack을 미리 정의함
 ```Python
 class Stack:
      def __init__(self):
-         self.items = []
+        self.items = []
 
-     def isEmpty(self):
+    def isEmpty(self):
          return self.items == []
 
-     def push(self, item):
+    def push(self, item):
          self.items.append(item)
 
-     def pop(self):
+    def pop(self):
          return self.items.pop()
 
-     def peek(self):
+    def peek(self):
          return self.items[len(self.items)-1]
 
-     def size(self):
+    def size(self):
          return len(self.items)
 ```
+본 실행 코드(입력값; 원자번호, 산화수)
 ```Python
 a= int(input()) # 원자번호 입력
 b=input() # 산화수 입력(원자는 0)
